--- a/app/views/teachers/index.html.slim
+++ b/app/views/teachers/index.html.slim
@@ -9,12 +9,13 @@
   table.table.table-striped.table-bordered.table-hover.table-clickable
     thead
       tr
-        th = Teacher.human_attribute_name(:name)
-        th = Teacher.human_attribute_name(:profession)
-        th = Teacher.human_attribute_name(:seminars)
+        - %i(name city email mobile seminars).each do |attr|
+          th = Teacher.human_attribute_name(attr)
     tbody
-      - @teachers.each do | teacher |
-        tr data = {url: url_for(teacher)}
+      - @teachers.each do |teacher|
+        tr data = { url: url_for(teacher) }
           td = teacher.name
-          td = teacher.profession
+          td = teacher.city
+          td = teacher.email
+          td = teacher.mobile
           td = teacher.seminars.count
