--- a/app/views/devise/registrations/edit.html.slim
+++ b/app/views/devise/registrations/edit.html.slim
@@ -1,6 +1,6 @@
 .authform
   h3 = t('.title')
-  = simple_form_for(resource, as: resource_name, url: registration_path(resource_name), html: {method: :put, role: 'form'}) do |f|
+  = simple_form_for(resource, as: resource_name, url: user_registration_path, html: {method: :patch, role: 'form'}) do |f|
     = devise_error_messages!
 
     = f.input :current_password
