--- a/app/views/layouts/_navigation.html.slim
+++ b/app/views/layouts/_navigation.html.slim
@@ -32,20 +32,8 @@
             = link_to teachers_title, teachers_url, tabindex: -1
           li class=('active' if controller_name == 'categories')
             = link_to categories_title, categories_url, tabindex: -1
-          /= navbar_dropdown 'Auswertungen' do
-            - Report.in_menu.all.each do |report|
-              li
-                = link_to report.name, report
-            - Statistic.all.each do |stat|
-              li
-                = link_to stat.name, stat
-            li
-              = link_to 'Neue Statistik', new_statistic_url
-          /= navbar_dropdown 'Stammdaten', active: controller_name.in?(%w(products sellers)) do
-            li class=('active' if controller_name == 'products')
-              = link_to title_for_model(Product), products_url
-            li class=('active' if controller_name == 'sellers')
-              = link_to title_for_model(Seller), sellers_url
+          li class=('active' if controller_name == 'users')
+            = link_to users_title, users_url, tabindex: -1
 
         ul.nav.navbar-nav.navbar-right
           li
@@ -53,5 +41,5 @@
               .form-group
                 input.form-control type="text" placeholder="Suche" name="q" value=@query autofocus=(params[:controller] == 'search') tabindex="-1"
           = navbar_dropdown current_user.username do
-            li = link_to 'Passwort ändern', edit_user_registration_url(current_user.username)
+            li = link_to 'Passwort ändern', edit_user_registration_url
             li = link_to 'Abmelden', destroy_user_session_path, method: 'delete', title: current_user.username
