rename title_for helper to page_title_for

--- a/app/views/teachers/show.html.slim
+++ b/app/views/teachers/show.html.slim
@@ -1,4 +1,4 @@
-- title_for @teacher, :name
+- page_title_for @teacher, :name
 .page-header
   = list_link teachers_url
   = edit_link edit_teacher_url(@teacher)
