--- a/lib/templates/slim/scaffold/index.html.slim
+++ b/lib/templates/slim/scaffold/index.html.slim
@@ -1,4 +1,4 @@
-- title_for <%= class_name %>
+- page_title_for <%= class_name %>
 .page-header
   = new_link new_<%= singular_table_name %>_path
   h2
