--- a/lib/templates/slim/scaffold/show.html.slim
+++ b/lib/templates/slim/scaffold/show.html.slim
@@ -1,4 +1,4 @@
-- title_for @<%= file_name %>, :name
+- page_title_for @<%= file_name %>, :name
 .page-header
   = list_link <%= index_helper %>_url
   = edit_link edit_<%= singular_table_name %>_url(@<%= file_name %>)
