--- a/app/views/categories/show.html.slim
+++ b/app/views/categories/show.html.slim
@@ -1,4 +1,4 @@
-- title_for @category, :name
+- page_title_for @category, :name
 .page-header
   = list_link categories_url
   = edit_link edit_category_url(@category)
