--- a/app/views/locations/show.html.slim
+++ b/app/views/locations/show.html.slim
@@ -1,4 +1,4 @@
-- title_for @location, :name
+- page_title_for @location, :name
 .page-header
   = list_link locations_url
   = edit_link edit_location_url(@location)
