--- a/app/views/seminars/show.html.slim
+++ b/app/views/seminars/show.html.slim
@@ -1,4 +1,4 @@
-- title_for @seminar, :name
+- page_title_for @seminar, :number
 .page-header
   = list_link seminars_url
   = edit_link edit_seminar_url(@seminar)
