--- a/app/views/locations/new.html.slim
+++ b/app/views/locations/new.html.slim
@@ -1,5 +1,5 @@
-- page_title_for Location, :new
+- page_title_for @location
 .page-header
-  h2 = t(".title")
+  h2 = title_for @location
 
 = render 'form'
