--- a/app/views/teachers/edit.html.slim
+++ b/app/views/teachers/edit.html.slim
@@ -1,7 +1,5 @@
 - page_title_for @teacher, :name
 .page-header
-  h2
-    => @teacher.name
-    small = Teacher.model_name.human
+  h2 = title_for @teacher
 
 = render 'form'
