--- a/app/views/users/show.html.slim
+++ b/app/views/users/show.html.slim
@@ -1,12 +1,9 @@
-- page_title_for @user, :name
+- page_title_for @user
 .page-header
   = list_link users_url
   = edit_link edit_user_url(@user)
   = delete_link @user
-  h2
-    => @user.name
-    small = User.model_name.human
-
+  h2 = title_for @user
 
 p = @user.username
 p = @user.email
