--- a/lib/templates/slim/scaffold/edit.html.slim
+++ b/lib/templates/slim/scaffold/edit.html.slim
@@ -1,7 +1,5 @@
-- page_title_for @<%= file_name %>, :name
+- page_title_for @<%= file_name %>
 .page-header
-  h2
-    => @<%= file_name %>.name
-    small = <%= class_name %>.model_name.human
+  h2 = title_for @<%= file_name %>
 
 = render 'form'
