--- a/lib/templates/slim/scaffold/index.html.slim
+++ b/lib/templates/slim/scaffold/index.html.slim
@@ -1,9 +1,7 @@
-- page_title_for <%= class_name %>
+- page_title_for @<%= plural_file_name %>
 .page-header
   = new_link new_<%= singular_table_name %>_path
-  h2
-    => @<%= plural_file_name %>.count
-    = <%= class_name %>.model_name.human count: @<%= plural_file_name %>.count
+  h2 = title_for @<%= plural_file_name %>
 
 .table-responsive
   table.table.table-striped.table-bordered.table-hover.table-clickable
