--- a/app/views/layouts/_navigation.html.slim
+++ b/app/views/layouts/_navigation.html.slim
@@ -26,6 +26,8 @@
         ul.nav.navbar-nav
           li class=('active' if controller_name == 'seminars')
             = link_to title_for_model(Seminar, with_icon: true), seminars_url, tabindex: -1
+          li class=('active' if controller_name == 'bookings')
+            = link_to title_for_model(Booking, with_icon: true), bookings_url, tabindex: -1
           li class=('active' if controller_name == 'locations')
             = link_to title_for_model(Location, with_icon: true), locations_url, tabindex: -1
           li class=('active' if controller_name == 'teachers')
