--- a/app/views/layouts/application.html.slim
+++ b/app/views/layouts/application.html.slim
@@ -2,10 +2,8 @@ doctype html
 html
   head
     meta[name="viewport" content="width=device-width, initial-scale=1.0"]
-    title
-      = content_for?(:title) ? yield(:title) : 'Event Management'
-    meta name="description" content="#{content_for?(:description) ? yield(:description) : 'Event Management'}"
-    == stylesheet_link_tag "application", :media => 'all', 'data-turbolinks-track' => true
+    title = content_for?(:title) ? yield(:title) : 'Event Management'
+    == stylesheet_link_tag 'application', media: 'all', 'data-turbolinks-track' => true
     == javascript_include_tag 'application', 'data-turbolinks-track' => true
     == csrf_meta_tags
   body
