--- a/app/views/bookings/_form.html.slim
+++ b/app/views/bookings/_form.html.slim
@@ -23,25 +23,10 @@
 
   .row
     .col-md-4
-      = f.simple_fields_for :invoice_address, @booking.invoice_address do |a|
-        = a.input :street
-        = a.input :zip
-        = a.input :city
+      = f.input :invoice_address, input_html: { rows: 4 }
+
   .row.action-buttons
     .col-md-12
       .pull-right
         => link_to t(:cancel), 'javascript: window.history.back();', class: 'btn btn-default'
         = f.submit t(:save), class: 'btn btn-primary'
-
-coffee:
-  $ ->
-    toggleCompanyFields = =>
-      search = window.location.search.replace(/\&company=(true|false)/g, '')
-      company = $('input[name="company"]:checked').val() is '1'
-      url = window.location.pathname + search + '&company=' + company
-      Turbolinks.visit(url)
-
-
-    $('input[name="company"]').change toggleCompanyFields
-    #toggleCompanyFields()
-
