--- a/app/assets/stylesheets/froala_editor.sass
+++ b/app/assets/stylesheets/froala_editor.sass
@@ -1,15 +1,17 @@
-@import froala_editor.min.css
-@import froala_style.min.css
+/*
+ *= require froala_editor.min.css
+ *= require froala_style.min.css
 
-//@import plugins/char_counter.min.css
-@import plugins/code_view.min.css
-@import plugins/colors.min.css
-//@import plugins/emoticons.min.css
-//@import plugins/file.min.css
-//@import plugins/fullscreen.min.css
-//@import plugins/image_manager.min.css
-//@import plugins/image.min.css
-@import plugins/line_breaker.min.css
-@import plugins/quick_insert.min.css
-@import plugins/table.min.css
-//@import plugins/video.min.css
+ * require plugins/char_counter.min.css
+ *= require plugins/code_view.min.css
+ *= require plugins/colors.min.css
+ * require plugins/emoticons.min.css
+ * require plugins/file.min.css
+ * require plugins/fullscreen.min.css
+ * require plugins/image_manager.min.css
+ * require plugins/image.min.css
+ *= require plugins/line_breaker.min.css
+ *= require plugins/quick_insert.min.css
+ *= require plugins/table.min.css
+ * require plugins/video.min.css
+ */
