replace froala editor with bootstrap-wysihtml5-rails

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -10,7 +10,7 @@
  * defined in the other CSS/SCSS files in this directory. It is generally better to create a new
  * file per style scope.
  *
- *= require froala_editor
+ *= require bootstrap-wysihtml5
  *= require font-awesome
  *= require select2
  *= require select2-bootstrap
