--- a/app/views/seminars/_table.html.slim
+++ b/app/views/seminars/_table.html.slim
@@ -2,7 +2,7 @@
   - scope = local_assigns[:scope]
   h4 = Seminar.model_name.human count: 2
   .table-responsive
-    table.table.table-striped.table-bordered.table-hover.table-clickable
+    table.standard-table.table-clickable
       thead
         tr
           th = Seminar.human_attribute_name(:number)
