--- a/app/views/teachers/index.html.slim
+++ b/app/views/teachers/index.html.slim
@@ -4,7 +4,7 @@
   h2 = title_for @teachers
 
 .table-responsive
-  table.table.table-striped.table-bordered.table-hover.table-clickable
+  table.standard-table.table-clickable
     thead
       tr
         - %i(name city email mobile seminars).each do |attr|
