--- a/app/views/users/index.html.slim
+++ b/app/views/users/index.html.slim
@@ -4,7 +4,7 @@
   h2 = title_for @users
 
 .table-responsive
-  table.table.table-striped.table-bordered.table-hover.table-clickable
+  table.standard-table.table-clickable
     thead
       tr
         - %i(name username email role last_sign_in_at).each do |attr|
