--- a/lib/templates/slim/scaffold/index.html.slim
+++ b/lib/templates/slim/scaffold/index.html.slim
@@ -4,7 +4,7 @@
   h2 = title_for @<%= plural_file_name %>
 
 .table-responsive
-  table.table.table-striped.table-bordered.table-hover.table-clickable
+  table.standard-table.table-clickable
     thead
       tr
 <%- for attribute in attributes -%>
