--- a/app/assets/stylesheets/table.sass
+++ b/app/assets/stylesheets/table.sass
@@ -1,3 +1,5 @@
+@import bootstrap
+
 table
   td, th
     &.price
@@ -26,3 +28,9 @@ table
 table
   td.number
     white-space: nowrap
+
+.standard-table
+  @extend .table
+  @extend .table-striped
+  @extend .table-bordered
+  @extend .table-hover
