--- a/app/views/locations/index.html.slim
+++ b/app/views/locations/index.html.slim
@@ -4,7 +4,7 @@
   h2 = title_for @locations
 
 .table-responsive
-  table.table.table-striped.table-bordered.table-hover.table-clickable
+  table.standard-table.table-clickable
     thead
       tr
         th = Location.human_attribute_name(:name)
