--- a/app/views/bookings/_form_company.html.slim
+++ b/app/views/bookings/_form_company.html.slim
@@ -1,5 +1,12 @@
 = f.simple_fields_for :attendees do |attendee_form|
-  = render 'form_attendee', attendee_form: attendee_form, count: true
+  - attendee = attendee_form.object
+  .attendee class=('new-record' if attendee.new_record?)
+    = attendee_form.input :_destroy, as: :hidden, input_html: { value: attendee.new_record? }
+    p
+      label #{ attendee_form.index + 1 }. #{Attendee.model_name.human}
+      - if attendee_form.index > 0
+        =< link_to fa_icon('trash'), '#', class: 'btn btn-danger btn-xs remove-attendee'
+    = render 'form_attendee', attendee_form: attendee_form
 
 .row
   .col-md-1 = link_to fa_icon('plus', text: 'Teilnehmer hinzufügen'), '#',
@@ -8,15 +15,22 @@
 .row
   .col-md-4
     = f.input :company_name
+    = f.input :invoice_address, input_html: { rows: 4 }
 
 coffee:
   $ ->
+    toggleAttendee = (attendee, hidden) ->
+      attendee.toggleClass('hidden', hidden)
+      attendee.find('.booking_attendees__destroy input').val(hidden)
+
     $('.attendee.new-record').addClass('hidden')
-    addButtonClicked = (event) ->
+    $('.add-attendee').on 'click', (event) ->
       event.preventDefault()
-      $('.attendee.new-record.hidden').first().removeClass('hidden')
-    $('.add-attendee').on 'click', addButtonClicked
-    $('.add-attendee').click()
+      toggleAttendee $('.attendee.new-record.hidden').first(), false
+    $('.remove-attendee').on 'click', (event) ->
+      event.preventDefault()
+      toggleAttendee $(this).parents('.attendee'), true
+    toggleAttendee $('.attendee.new-record.hidden').first(), false
 
 sass:
   a.add-attendee
